# GUI_Base

./: .gitignore  README.md  build_example.py  build_fluent_example.py  build_fluent_nuitka.py  build_nuitka.py  config.json  demo.py  fluent_migration_guide.md  fluent_style_comparison.py  main.py  main_fluent.py  pyproject.toml  test_config_functionality.py  test_skip_version.py
.augment/rules/: coding-rule.md
docs/: AUTO_UPDATE_GUIDE.md  EXCEPTION_HANDLING.md  NOTIFICATION_SYSTEM.md  PROJECT_STRUCTURE.md  REFACTORING_SUMMARY.md  SETTINGS_MANAGEMENT.md  THEME_SYSTEM.md  suggest.md
examples/: button_style_demo.py  drag_drop_demo.py  example_update.json  file_utils_demo.py  test_exception_handler.py  test_theme.py  update_example.py
fluent_style_demo/: build_fluent_example.py  build_fluent_nuitka.py
gui/: __init__.py  base_tab.py  error_dialog.py  settings_tab.py  tab1.py  tab2.py  tab3.py  toast.py
nuitka_build_fluent/main_fluent.dist/: _bz2.pyd  _ctypes.pyd  _decimal.pyd  _hashlib.pyd  _lzma.pyd  _socket.pyd  select.pyd  unicodedata.pyd
plugins/: __init__.py
plugins/example_plugin/: __init__.py
updater/: __init__.py  config.py  file_manager.py  logger.py  update_checker.py  update_dialogs.py  update_manager.py
utils/: __init__.py  config.py  display.py  drag_drop.py  exception_handler.py  file_utils.py  logger.py  notification.py  plugin_base.py  plugin_manager.py  styles.py  system_tray.py  theme.py
