[project]
name = "gui-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.9.1",
    "pyside6-fluent-widgets>=1.8.3",
    "packaging>=21.0",
    "loguru>=0.7.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
]
